Updates to manuscript

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -74,6 +74,7 @@ on GitHub at \url{https://github.com/syounkin/ITHIM}.
 \href{patz@wisc.edu}{patz@wisc.edu}
 \end{abstract}
 
+
 \section{Introduction}
 
 ITHIM is a mathematical model that integrates data on travel patterns,
@@ -81,25 +82,21 @@ physical activity, fine particulate matter, GHG emissions, and disease
 and injuries. Based on population and travel scenarios. The model has
 been used to calculate the health impacts of walking and bicycling
 short distances usually traveled by car or driving low-emission
-automobiles \cite{woodcock2013}.
+automobiles \cite{woodcock2013,maizlish2013}.
 
-The model uses comparative risk assessment through which it formulates
-a change in the disease burden, resulting from the shift in the
-exposure distribution from a baseline scenario to an alternative
-scenario.
+
 
 \begin{methods}
 \section{Method}
 
-\begin{itemize}
-\item NHTS data
-\item GBD data
-\item ITHIM model parameters
-\end{itemize}
+The ITHIM model uses comparative risk assessment through which it
+formulates a change in the disease burden, resulting from the shift in
+the exposure distribution from a baseline scenario to an alternative
+scenario.
 
-\end{methods}
+\subsection{Data Sources}
 
-\section{Regional Example}
+\subsection{U.S. Metro-Regional Analysis}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -126,14 +123,14 @@ ullamco laboris nisi ut aliquip ex ea commodo consequat.
 estimates.
 }\label{dalyFigure}
 \end{figure}
-
+\end{methods}
 \section*{Acknowledgment}
 
 \paragraph{Funding\textcolon} SGY is supported by$\ldots$ , JV, JP, $\ldots$
 
 %\bibliographystyle{natbib}
-%\bibliographystyle{bmc_article}
-\bibliographystyle{mypapers}
+\bibliographystyle{bmc_article}
+%\bibliographystyle{mypapers}
 \bibliography{ITHIM}
 \end{document}
 
