--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -34,7 +34,7 @@ University of Wisconsin{\textendash}Madison, Madison, WI USA\\
 \begin{abstract}
 
 \section{Summary:}
-We divided the U.S. metropolitan regions into 10 regions defined by
+\col[blue]{We divided the U.S. metropolitan regions into 10 regions defined by
 the Department of Health and Human Services (HHS1-10).  We performed a
 comparative risk analysis for each of the regions using national
 averages as the baseline.  We investigated the active transport
@@ -42,34 +42,37 @@ component of the ITHIM model by estimating regional travel parameters
 using the National Household Transportation Survey.  The West coast
 and the Northeast of the U.S. have travel patterns that, if mirrored
 by the nation, would save the U.S. thousands to hundreds of thousands
-DALYs. 
+DALYs.}
 
 \section{Availability:}
-\package{} may be explored using the user interface avaiable
+\col[blue]{\package{} may be explored using the user interface avaiable
 at \webpage{}.  The source code and data files for \package{} are
-publicly available on GitHub at \webpage{}.
+publicly available on GitHub at \webpage{}.}
 
 \section{Supplementary information:}
 
-See \webpage{} for links to the source code, manual, tutorial and
-links for more information about the ITHIM model.
+\col[blue]{See \webpage{} for links to the source code, manual, tutorial and
+links for more information about the ITHIM model.}
 
 \section{Contact:}
-\href{javargo@wisc.edu}{javargo@wisc.edu}
+\col[blue]{\href{javargo@wisc.edu}{javargo@wisc.edu}}
 \end{abstract}
 
 
 \section{Introduction}
-ITHIM is a statistical model that integrates data on travel patterns,
+\col{ITHIM is a statistical model that integrates data on travel patterns,
 physical activity, fine particulate matter, GHG emissions, and disease
 and injuries. Based on population and travel scenarios. The model has
 been used to calculate the health impacts of walking and bicycling
 short distances usually traveled by car or driving low-emission
-automobiles \cite{woodcock2013,maizlish2013}.
+automobiles \cite{woodcock2013,maizlish2013}.}
 
+\col{The ITHIM model uses comparative risk assessment through which it
+formulates a change in the disease burden, resulting from the shift in
+the exposure distribution from a baseline scenario to an alternative
+scenario.}
 
-
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+\col{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut
 aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -77,48 +80,54 @@ reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
 pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
 culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
 dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua.
+incididunt ut labore et dolore magna aliqua.}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+\col{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut
 aliquip ex ea commodo consequat. Duis aute irure dolor in
 reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
 pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.
-
-The ITHIM model uses comparative risk assessment through which it
-formulates a change in the disease burden, resulting from the shift in
-the exposure distribution from a baseline scenario to an alternative
-scenario.
-
-\subsection{Data Sources}
-
-\subsection{U.S. Metro-Regional Analysis}
-
+culpa qui officia deserunt mollit anim id est laborum.}
 
 \begin{methods}
 
 \section{Methods}
 
-\begin{itemize}
-\item The coefficient of variation was fixed at ??? for all models.
-  Earlier ITHIM models estimated this as a function of total active
-  tranpsort time to model the decrease in variance of active transport
-  time that occurs for increasing means, i.e., fitter communities have
-  less variance in active transport time.
-\item The mean non-travel activity for the referent group was modeled
-  as a variable.  The relative means across age-sex strata were fixed,
-  and estimated using ATUS.
-\item The national DALYs were stimated using the attributable fraction
-  provided by the comparitive risk assesment.  The estimates for
-  disease burned came from WHO and their GBD study.
-\item Not all of the regions had the same sample size.  In fact a few
-  of the regions have relativel low sample size.  Maybe we should put
-  confidence intervals on our estimates.
-\end{itemize}
+\col[blue]{\begin{itemize}
+  \item The coefficient of variation was fixed at ??? for all strata
+    and models.  Earlier ITHIM models estimated this as a function of
+    total active tranpsort time to model the decrease in variance of
+    active transport time that occurs for increasing means, i.e.,
+    fitter communities have less variance in active transport time.
+  \item The mean non-travel activity for the referent group was
+    modeled as a variable.  The relative means across age-sex strata
+    were fixed, and estimated using ATUS.
+  \item The national DALYs were stimated using the attributable
+    fraction provided by the comparitive risk assesment.  The
+    estimates for disease burned came from WHO and their GBD study.
+  \item Not all of the regions had the same sample size.  In fact a
+    few of the regions have relativel low sample size.  Maybe we
+    should put confidence intervals on our estimates.
+  \item The ITHIM model stratifies the population by sex and age using
+    eight age classes.  Within each stratum active transport time is
+    modeled as log-normal with mean $\hat{\mu}_{i,j}$ which is
+    estimated from the National Household Transportation Survey.
+  \item Quintiles, in this case the quantiles for percentages
+    $(0.1,0.3,0.5,0.7,0.9)$, are used to discretize the integral
+    defined in the Comparative Risk Assesment (CRA)
+  \item 
+\end{itemize}}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+\subsection{Data Sources}
+
+\col[red]{\begin{itemize}
+\item National Household Transportation Survey (NHTS)
+\item American time Use Survey
+\item CDC Wonder
+\end{itemize}}
+
+\col[red]{Lorem ipsum dolor sit amet, consectetur adipisicing)) elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut
 aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -134,9 +143,9 @@ occaecat cupidatat non proident, sunt in culpa qui officia deserunt
 mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
 adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo consequat.
+ullamco laboris nisi ut aliquip ex ea commodo consequat.}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+\col[red]{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut
 aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -152,12 +161,12 @@ occaecat cupidatat non proident, sunt in culpa qui officia deserunt
 mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
 adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo consequat.
+ullamco laboris nisi ut aliquip ex ea commodo consequat.}
 
 \end{methods}
 
-\section{Regional Example}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+\section{U.S. Metro-Regional Analysis}
+\col[blue]{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut
 aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -173,25 +182,7 @@ occaecat cupidatat non proident, sunt in culpa qui officia deserunt
 mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
 adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-aliquip ex ea commodo consequat. Duis aute irure dolor in
-reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
-dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
-adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo consequat.
+ullamco laboris nisi ut aliquip ex ea commodo consequat.}
 
 \begin{figure}[t]
     \centerline{\includegraphics[width=0.4\textwidth]{./figures/hhsmap}}
@@ -200,7 +191,7 @@ ullamco laboris nisi ut aliquip ex ea commodo consequat.
       transportation estimates.}\label{dalyFigure}
 \end{figure}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+\col[blue]{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut
 aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -216,14 +207,13 @@ occaecat cupidatat non proident, sunt in culpa qui officia deserunt
 mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
 adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
+ullamco laboris nisi ut aliquip ex ea commodo consequat.}
 
 \section*{Acknowledgment}
 \paragraph{Funding\textcolon} SGY is supported by$\ldots$ , JV, JP, $\ldots$
 
-\bibliographystyle{natbib}
+%\bibliographystyle{natbib}
 %\bibliographystyle{bmc_article}
-%\bibliographystyle{mypapers}
+\bibliographystyle{mypapers}
 \bibliography{ITHIM}
 \end{document}
