Updates to manuscript

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -119,6 +119,8 @@ culpa qui officia deserunt mollit anim id est laborum.}
   \item 
 \end{itemize}}
 
+The ITHIM model uses the comparative risk assesment framework 
+
 \subsection{Data Sources}
 
 \col[red]{\begin{itemize}
@@ -183,6 +185,7 @@ mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
 adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
 ullamco laboris nisi ut aliquip ex ea commodo consequat.}
+
 
 \begin{figure}[t]
     \centerline{\includegraphics[width=0.4\textwidth]{./figures/hhsmap}}
