--- a/manuscript/ITHIM.bib
+++ b/manuscript/ITHIM.bib
@@ -21,4 +21,71 @@ number = {4},
 pages = {703-709}
 }
 
+@Article{woodcock2009,
+  title={Public health benefits of strategies to reduce greenhouse-gas emissions: urban land transport},
+  author={Woodcock, James and Edwards, Phil and Tonne, Cathryn and Armstrong, Ben G and Ashiru, Olu and Banister, David and Beevers, Sean and Chalabi, Zaid and Chowdhury, Zohir and Cohen, Aaron and others},
+  journal={The Lancet},
+  volume={374},
+  number={9705},
+  pages={1930--1943},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@Article{woodcock2014,
+  title={Health effects of the London bicycle sharing system: health impact modelling study},
+  author={Woodcock, James and Tainio, Marko and Cheshire, James and O’Brien, Oliver and Goodman, Anna},
+  volume={348},
+  pages={g425},
+  year={2014},
+  publisher={British Medical Journal Publishing Group}
+}
+
+@Article{woodcock2015,
+  title={A53 Cycling health and climate: what are the circumstances under which cycling can contribute to substantive greenhouse gas emission reductions and whose travel should be targeted to achieve the biggest health and climate benefits?},
+  author={Woodcock, James and Lovelace, Robin and Tainio, Marko},
+  journal={Journal of Transport \& Health},
+  volume={2},
+  number={2},
+  pages={S32},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@Article{gotschi2015,
+  title={Contrasts in active transport behaviour across four countries: How do they translate into public health benefits?},
+  author={G{\"o}tschi, Thomas and Tainio, Marko and Maizlish, Neil and Schwanen, Tim and Goodman, Anna and Woodcock, James},
+  journal={Preventive medicine},
+  volume={74},
+  pages={42-48},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@Article{whitfield2016,
+  title = "The integrated transport and health impact modeling tool in Nashville, Tennessee, USA: Implementation steps and lessons learned ",
+  journal = "Journal of Transport & Health ",
+  volume = "",
+  number = "",
+  pages = " - ",
+  year = "2016",
+  note = "",
+  issn = "2214-1405",
+  doi = "http://dx.doi.org/10.1016/j.jth.2016.06.009",
+  url = "http://www.sciencedirect.com/science/article/pii/S2214140516301876",
+  author = "Geoffrey P Whitfield and Leslie A Meehan and Neil Maizlish and Arthur M Wendel",
+  abstract = "Abstract The Integrated Transport and Health Impact Model (ITHIM) is a comprehensive tool that estimates the hypothetical health effects of transportation mode shifts through changes to physical activity, air pollution, and injuries. The purpose of this paper is to describe the implementation of \{ITHIM\} in greater Nashville, Tennessee (USA), describe important lessons learned, and serve as an implementation guide for other practitioners and researchers interested in running ITHIM. As might be expected in other metropolitan areas in the US, not all the required calibration data was available locally. We utilized data from local, state, and federal sources to fulfill the 14 \{ITHIM\} calibration items, which include disease burdens, travel habits, physical activity participation, air pollution levels, and traffic injuries and fatalities. Three scenarios were developed that modeled stepwise increases in walking and bicycling, and one that modeled reductions in car travel. Cost savings estimates were calculated by scaling national-level, disease-specific direct treatment costs and indirect lost productivity costs to the greater Nashville population of approximately 1.5 million. Implementation required approximately one year of intermittent, part-time work. Across the range of scenarios, results suggested that 24–123 deaths per year could be averted in the region through a 1–5\% reduction in the burden of several chronic diseases. This translated into $10–$63 million in estimated direct and indirect cost savings per year. Implementing \{ITHIM\} in greater Nashville has provided local decision makers with important information on the potential health effects of transportation choices. Other jurisdictions interested in \{ITHIM\} might find the Nashville example as a useful guide to streamline the effort required to calibrate and run the model. "
+}
+
+@Article{grabow2012,
+  title={Air quality and exercise-related health benefits from reduced car travel in the midwestern United States},
+  author={Grabow, Maggie L and Spak, Scott N and Holloway, Tracey and Stone Jr, Brian and Mednick, Adam C and Patz, Jonathan A},
+  journal={Environmental health perspectives},
+  volume={120},
+  number={1},
+  pages={68},
+  year={2012},
+  publisher={National Institute of Environmental Health Sciences}
+}
+
 
