--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -34,12 +34,12 @@ University of Wisconsin{\textendash}Madison, Madison, WI USA\\
 \begin{abstract}
 
 \section{Summary:}
-\col[blue]{We divided the U.S. metropolitan regions into 10 regions defined by
-the Department of Health and Human Services (HHS1-10).  We performed a
-comparative risk analysis for each of the regions using national
-averages as the baseline.  We investigated the active transport
-component of the ITHIM model by estimating regional travel parameters
-using the National Household Transportation Survey.  The West coast
+\col[blue]{While increased active transportation, primarily cycling and walk, is often held up as a goal for improved public health — via reduced chronic disease, improved air quality, and reductions in greenhouse gas emissions — obtaining estimates for the quantiative impacts of such shifts remains infrequent, in not altogether absent. Using U.S. metropolitan counties from  the 10 regions defined by
+the Department of Health and Human Services (HHS1-10) we perform a
+comparative risk analysis between each regions and national
+averages as the baseline.  We investigated the reduced chronic disease burden of (x,y,z outcomes) from increased physical activity from population shifts in the amount of biking and walking doen for transport. 
+Our methods employ the Integrated Transport and Health Impacts Model (ITHIM) informed by regional travel parameters
+using the National Household Transportation Survey, non-travel activity metircs from the American Time Use Survey, and baseline Disease burden from the Centers for Disease Control and Prevention's WONDER database.  Our findings show that the West coast
 and the Northeast of the U.S. have travel patterns that, if mirrored
 by the nation, would save the U.S. thousands to hundreds of thousands
 DALYs.}
@@ -60,6 +60,8 @@ links for more information about the ITHIM model.}
 
 
 \section{Introduction}
+\col{}
+
 \col{ITHIM is a statistical model that integrates data on travel patterns,
 physical activity, fine particulate matter, GHG emissions, and disease
 and injuries. Based on population and travel scenarios. The model has
