--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -90,6 +90,7 @@ reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
 pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
 culpa qui officia deserunt mollit anim id est laborum.}
 
+
 \begin{methods}
 
 \section{Methods}
@@ -188,7 +189,7 @@ ullamco laboris nisi ut aliquip ex ea commodo consequat.}
 
 
 \begin{figure}[t]
-    \centerline{\includegraphics[width=0.4\textwidth]{./figures/hhsmap}}
+    \centerline{\includegraphics[width=0.4\textwidth]{./figures/HHSmap}}
     \centerline{\includegraphics[width=0.4\textwidth]{./figures/fig2}}
     \caption{Change in total national DALYs for each regional
       transportation estimates.}\label{dalyFigure}
