Updates to ITHIM manuscript 1

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -12,7 +12,8 @@
 \newcommand{\sgy}[1]{{\itshape\col{#1}}}
 \newcommand{\XX}{\sgy{XX}}
 \newcommand{\webpage}{\url{http://www.ithim.ghi.wisc.edu}}
-
+\newcommand{\af}{\rho}
+\newcommand{\mets}{MET-hrs./week}
 \begin{document}
 \firstpage{1}
 
@@ -34,25 +35,35 @@ University of Wisconsin{\textendash}Madison, Madison, WI USA\\
 \begin{abstract}
 
 \section{Summary:}
-\col[blue]{While increased active transportation, primarily cycling and walk, is often held up as a goal for improved public health — via reduced chronic disease, improved air quality, and reductions in greenhouse gas emissions — obtaining estimates for the quantiative impacts of such shifts remains infrequent, in not altogether absent. Using U.S. metropolitan counties from  the 10 regions defined by
-the Department of Health and Human Services (HHS1-10) we perform a
-comparative risk analysis between each regions and national
-averages as the baseline.  We investigated the reduced chronic disease burden of (x,y,z outcomes) from increased physical activity from population shifts in the amount of biking and walking doen for transport. 
-Our methods employ the Integrated Transport and Health Impacts Model (ITHIM) informed by regional travel parameters
-using the National Household Transportation Survey, non-travel activity metircs from the American Time Use Survey, and baseline Disease burden from the Centers for Disease Control and Prevention's WONDER database.  Our findings show that the West coast
-and the Northeast of the U.S. have travel patterns that, if mirrored
-by the nation, would save the U.S. thousands to hundreds of thousands
-DALYs.}
+\col[blue]{While increased active transportation, primarily cycling
+  and walk, is often held up as a goal for improved public health —
+  via reduced chronic disease, improved air quality, and reductions in
+  greenhouse gas emissions --- obtaining estimates for the quantiative
+  impacts of such shifts remains infrequent, in not altogether
+  absent. Using U.S. metropolitan counties from the 10 regions defined
+  by the Department of Health and Human Services (HHS1-10) we perform
+  a comparative risk analysis between each regions and national
+  averages as the baseline.  We investigated the reduced chronic
+  disease burden of (x,y,z outcomes) from increased physical activity
+  from population shifts in the amount of biking and walking doen for
+  transport.  Our methods employ the Integrated Transport and Health
+  Impacts Model (ITHIM) informed by regional travel parameters using
+  the National Household Transportation Survey, non-travel activity
+  metircs from the American Time Use Survey, and baseline Disease
+  burden from the Centers for Disease Control and Prevention's WONDER
+  database.  Our findings show that the West coast and the Northeast
+  of the U.S. have travel patterns that, if mirrored by the nation,
+  would save the U.S. thousands to hundreds of thousands DALYs.}
 
 \section{Availability:}
-\col[blue]{\package{} may be explored using the user interface avaiable
-at \webpage{}.  The source code and data files for \package{} are
-publicly available on GitHub at \webpage{}.}
+\col[blue]{\package{} may be explored using the user interface
+  avaiable at \webpage{}.  The source code and data files for
+  \package{} are publicly available on GitHub at \webpage{}.}
 
 \section{Supplementary information:}
 
-\col[blue]{See \webpage{} for links to the source code, manual, tutorial and
-links for more information about the ITHIM model.}
+\col[blue]{See \webpage{} for links to the source code, manual,
+  tutorial and links for more information about the ITHIM model.}
 
 \section{Contact:}
 \col[blue]{\href{javargo@wisc.edu}{javargo@wisc.edu}}
@@ -60,77 +71,79 @@ links for more information about the ITHIM model.}
 
 
 \section{Introduction}
-\col{}
 
-\col{ITHIM is a statistical model that integrates data on travel patterns,
-physical activity, fine particulate matter, GHG emissions, and disease
-and injuries. Based on population and travel scenarios. The model has
-been used to calculate the health impacts of walking and bicycling
-short distances usually traveled by car or driving low-emission
-automobiles \cite{woodcock2013,maizlish2013}.}
+\col{ITHIM is a statistical model that integrates data on travel
+  patterns, physical activity, fine particulate matter, GHG emissions,
+  and disease and injuries. Based on population and travel
+  scenarios. The model has been used to calculate the health impacts
+  of walking and bicycling short distances usually traveled by car or
+  driving low-emission automobiles \cite{woodcock2013,maizlish2013}.}
 
 \col{The ITHIM model uses comparative risk assessment through which it
-formulates a change in the disease burden, resulting from the shift in
-the exposure distribution from a baseline scenario to an alternative
-scenario.}
+  formulates a change in the disease burden, resulting from the shift
+  in the exposure distribution from a baseline scenario to an
+  alternative scenario.}
 
 \col{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-aliquip ex ea commodo consequat. Duis aute irure dolor in
-reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
-dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua.}
+  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+  aliquip ex ea commodo consequat. Duis aute irure dolor in
+  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+  culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
+  dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+  incididunt ut labore et dolore magna aliqua.}
 
 \col{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-aliquip ex ea commodo consequat. Duis aute irure dolor in
-reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.}
+  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+  aliquip ex ea commodo consequat. Duis aute irure dolor in
+  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+  culpa qui officia deserunt mollit anim id est laborum.}
 
 
 \begin{methods}
 
 \section{Methods}
 
-\col[blue]{\begin{itemize}
-  \item The coefficient of variation was fixed at ??? for all strata
-    and models.  Earlier ITHIM models estimated this as a function of
-    total active tranpsort time to model the decrease in variance of
-    active transport time that occurs for increasing means, i.e.,
-    fitter communities have less variance in active transport time.
-  \item The mean non-travel activity for the referent group was
-    modeled as a variable.  The relative means across age-sex strata
-    were fixed, and estimated using ATUS.
-  \item The national DALYs were stimated using the attributable
-    fraction provided by the comparitive risk assesment.  The
-    estimates for disease burned came from WHO and their GBD study.
-  \item Not all of the regions had the same sample size.  In fact a
-    few of the regions have relativel low sample size.  Maybe we
-    should put confidence intervals on our estimates.
-  \item The ITHIM model stratifies the population by sex and age using
-    eight age classes.  Within each stratum active transport time is
-    modeled as log-normal with mean $\hat{\mu}_{i,j}$ which is
-    estimated from the National Household Transportation Survey.
-  \item Quintiles, in this case the quantiles for percentages
-    $(0.1,0.3,0.5,0.7,0.9)$, are used to discretize the integral
-    defined in the Comparative Risk Assesment (CRA)
-  \item 
-\end{itemize}}
+The ITHIM model uses the comparative risk assesment framework to
+estimate the population attributable fraction, $\af$.  In our case
+$\af$ represents the proportional change in mortality and morbidity if
+the physical activity levels were adjusted to represent an alternate
+scenario.
 
-The ITHIM model uses the comparative risk assesment framework 
+\begin{equation}
+\af = \frac{\int R(x)P(x) dx  - \int R(x)Q(x) dx }{\int R(x)P(x) dx}
+\end{equation}
+
+Here $R(x)$ represents the risk when the individual has exposure $x$,
+in our case physical activity (\mets).  $P(x)$ and $Q(x)$ denote the
+population density of individuals with exposure $x$, in the baseline
+and alternate scenarios, respectively.  The exposure variable, $x$, is
+modeled as the sum of travel-related exposure and non-travel-related
+exposure.
+
+The time spent walking or cycling, i.e., active transport time, is
+modeled as a log-normal random variable with means defined for each
+age-sex stratum.  The non-travel-related physical activity is also
+modeled as log-normal with stratum-specific means.  Estimates for
+non-travel-related physical activity are diffiuclt.  We used the
+American Time Use Survey data to estimate the relative means for each
+of the age-sex strata.  We then treat the mean of the referent group
+as a variable and compute results over a grid of values for this
+variable.  See Figure \ref{dalyFigure}.
+
+The travel-related exposure is estimated using active transport time
+along with assumptions about how much physical activity is required
+for cycling and walking.  Active transport time and non-travel-related
+physical activity are modeled as independent random variables.  A
+fixed value was used as the coefficient of variation for the
+distributin of active transport time. A different, but also fixed,
+value was used for the non-travel-related physical activity
+distribution.
 
 \subsection{Data Sources}
-
-\col[red]{\begin{itemize}
-\item National Household Transportation Survey (NHTS)
-\item American time Use Survey
-\item CDC Wonder
-\end{itemize}}
 
 \col[red]{Lorem ipsum dolor sit amet, consectetur adipisicing)) elit, sed do
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -150,23 +163,6 @@ adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
 ullamco laboris nisi ut aliquip ex ea commodo consequat.}
 
-\col[red]{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-aliquip ex ea commodo consequat. Duis aute irure dolor in
-reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
-dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
-adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo consequat.}
 
 \end{methods}
 
@@ -197,23 +193,6 @@ ullamco laboris nisi ut aliquip ex ea commodo consequat.}
       transportation estimates.}\label{dalyFigure}
 \end{figure}
 
-\col[blue]{Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-aliquip ex ea commodo consequat. Duis aute irure dolor in
-reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
-dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
-adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-ullamco laboris nisi ut aliquip ex ea commodo consequat.}
 
 \section*{Acknowledgment}
 \paragraph{Funding\textcolon} SGY is supported by$\ldots$ , JV, JP, $\ldots$
@@ -223,3 +202,32 @@ ullamco laboris nisi ut aliquip ex ea commodo consequat.}
 \bibliographystyle{mypapers}
 \bibliography{ITHIM}
 \end{document}
+
+%   \begin{itemize}
+%   \item The coefficient of variation was fixed at ??? for all strata
+% and models.  Earlier ITHIM models estimated this as a function of
+% total active tranpsort time to model the decrease in variance of
+% active transport time that occurs for increasing means, i.e., fitter
+% communities have less variance in active transport time.
+%   \item The mean non-travel activity for the referent group was
+% modeled as a variable.  The relative means across age-sex strata were
+% fixed, and estimated using ATUS.
+%   \item The national DALYs were stimated using the attributable
+% fraction provided by the comparitive risk assesment.  The estimates
+% for disease burned came from WHO and their GBD study.
+%   \item Not all of the regions had the same sample size.  In fact a
+% few of the regions have relativel low sample size.  Maybe we should
+% put confidence intervals on our estimates.
+%   \item The ITHIM model stratifies the population by sex and age using
+% eight age classes.  Within each stratum active transport time is
+% modeled as log-normal with mean $\hat{\mu}_{i,j}$ which is estimated
+% from the National Household Transportation Survey.
+%   \item Quintiles, in this case the quantiles for percentages
+% $(0.1,0.3,0.5,0.7,0.9)$, are used to discretize the integral defined
+% in the Comparative Risk Assesment (CRA)
+%   \item
+% \end{itemize}
+%  ``the proportional reduction in population
+% disease or mortality that would occur if exposure to a risk factor
+% were reduced to an alternative ideal exposure scenario (eg. no tobacco
+% use).'' \url{http://www.who.int/healthinfo/global_burden_disease/metrics_paf/en/}
