Update to ITHIM manuscript #1

--- a/manuscript/ITHIM.bib
+++ b/manuscript/ITHIM.bib
@@ -88,4 +88,9 @@ pages = {703-709}
   publisher={National Institute of Environmental Health Sciences}
 }
 
-
+@Article{UWTechReport,
+  title={A study that estimates road fatalaties per walk travel share in U.S. Metropolitan areas.},
+  author={Vargo, Jason},
+  journal={UW-Madison Technical Report},
+  year={2016}
+}
